SV-101 changed CSS to prevent stretching on Apple devices

--- a/blocks/l-sber-vmeste/l-sber-vmeste.scss
+++ b/blocks/l-sber-vmeste/l-sber-vmeste.scss
@@ -39,18 +39,23 @@ body, html {
     width: 100%;
     height: 100%;
 }
+html {
+    background-image: url('images/fon_SV.png'); /* fallback for older browsers */
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(49, 49, 49, 0.9) 100%), url('images/fon.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+body {
+    background: transparent;
+}
 
 .l-sber-vmeste {
     width: 100%;
     min-height: 100%;
     font-family: AndaleMono;
     font-weight: normal;
-    background-image: url('images/fon_SV.png'); /* fallback for older browsers */
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.4) 0%, rgba(49, 49, 49, 0.9) 100%), url('images/fon.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
 }
 
 .i-layout_mobile,
